[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "air-langchain-trust"
version = "0.1.0"
description = "AIR Trust Layer for LangChain — audit trails, data tokenization, consent gates, and injection detection"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "AIR Blackbox", email = "hello@airblackbox.com"},
]
keywords = ["langchain", "langgraph", "ai-safety", "audit", "trust", "security", "llm", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/airblackbox/trust-langchain"
Repository = "https://github.com/airblackbox/trust-langchain"
Issues = "https://github.com/airblackbox/trust-langchain/issues"
Documentation = "https://airblackbox.com/docs"

[tool.setuptools.packages.find]
include = ["air_langchain_trust*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
